Update: Added user Online/Offline status using rtdb

--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
-Api_Key:"AIzaSyBCyvx3kzwCBeOSe1MCm6M4BFL3T6ZOTP0"
+REACT_APP_FIREBASE_API_KEY=AIzaSyBCyvx3kzwCBeOSe1MCm6M4BFL3T6ZOTP0
+REACT_APP_FIREBASE_AUTH_DOMAIN=connectify-9803.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=connectify-9803
+REACT_APP_FIREBASE_STORAGE_BUCKET=connectify-9803.firebasestorage.app
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=291325959035
+REACT_APP_FIREBASE_APP_ID=1:291325959035:web:d1ebf3fc49e76d4fc93bde
+REACT_APP_FIREBASE_MEASUREMENT_ID=G-RZQWXL63PX
+REACT_APP_FIREBASE_DATABASE_URL=https://connectify-9803-default-rtdb.asia-southeast1.firebasedatabase.app
+REACT_APP_FIREBASE_VAPID_KEY=BFR4GjxKJNGnp1bOEFPOA65drvCbakGA_KS3hnlZNlJBviDIZ503cY-3--qM69eO4QVyadXTj9OLqK-UIHgPhLg
